--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-549.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇩🇪 德国-1.11MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 中国-265.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.06MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-1.04MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-918.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-563.2KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇫🇷 法国-1.25MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇨🇳 中国-335.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇩🇪 德国-972.1KB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-307.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.56MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-440.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-349.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-563.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
