--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇩🇪 德国-1.04MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-918.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇩🇪 德国-972.1KB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-307.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.56MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-440.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-349.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇯🇵 日本-1.92MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-265.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.95MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-549.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.26MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-2.42MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-2.53MB/s(Youtube:不良林), server: 85.208.108.94, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.74MB/s(Youtube:不良林), server: 85.208.108.94, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-2.75MB/s(Youtube:不良林), server: 85.208.108.94, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 日本-2.45MB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-972.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-307.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
