--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.92MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 中国-265.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.95MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-549.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-3.26MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-2.42MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-2.53MB/s(Youtube:不良林), server: 85.208.108.94, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.74MB/s(Youtube:不良林), server: 85.208.108.94, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-2.75MB/s(Youtube:不良林), server: 85.208.108.94, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇩🇪 德国-1.13MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-1.96MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.94, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇯🇵 日本-2.45MB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-351.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-452.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.20MB/s(Youtube:不良林), server: 168.138.214.114, port: 443, type: vmess, uuid: e35159d7-e8fb-479c-b490-e8e9a924e0c6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a9S24DC8US, ws-headers: {Host: 168.138.214.114}}
+  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: hk-hkg-it2-svm-v2.node.inforun.work, port: 13888, type: vmess, uuid: b536533e-6fa0-4575-a1f8-bbf81a194f44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /je5x3pBN1vez3NQudNkB, ws-headers: {Host: hk-hkg-it2-svm-v2.node.inforun.work}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-265.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-549.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
